public/css/gallery.css
/* ========================= G A L L E R Y =================================== */

/* ========================= photoLERY HEADER =============================== */

@font-face{
   font-family: 'Segoe UI';
   src : url('../fonts/segoeui.ttf');
}
body{
  background-color: #fff !important;
}

#photolery-header{
  background: linear-gradient(rgba(0,0,0, .4), rgba(0,0,0, .4)),
                       url('../img/sliders/slider-6.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  text-align: center;
  height: 620px;
}

#test{
  position: relative;
}
#photolery-header h1{
  color: #F2C053;
  font-family: 'Segoe UI';
  margin-top: 40vh;
  margin-bottom: 5vw;
  letter-spacing: 5px;
  border: 2px solid #F2C053;
  font-size: 48px;
  padding: 15px;
}

#photolery-header .btn{
  cursor: default;
}

#photolery-header p{
  color: #F2C053;
  font-family: 'Segoe UI';
  font-size: 20px;
}

#photolery-header i{
  font-size: 35px;
}


/* ================================ PHOTO SECTIONS =========================== */
.photo-album{
  background-color: #ffffff;
  margin-top: 8vh;
}

.photo-album h3{
  color: #F2C053;
  text-align: center;
  font-weight: bold;
}

.photo-album .row{
  margin-bottom: 3vw;
}

@media(max-width: 767px){
  .photo-album .col-md-4{
    margin-bottom: 4vw;
  }
}

.photo-album .album{
  height: 100%;
  width: 100%;
}

.photo-album .album img{
  max-width: 100%;
  max-height: 100%;
}

.album {
  position: relative;
}

.image {
  display: block;
  max-width: 100%;
  max-height: 100%;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #F2C053;
}

.album:hover .overlay {
  opacity: 0.9;
}

.text {
  color: #000000;
  font-family: 'Segoe UI';
  font-size: 24px;
  font-weight: bold;
  position: absolute;
  text-align: center;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}

.text hr{
  color: #fff;
}

